News image restored

--- a/Templates/News.html
+++ b/Templates/News.html
@@ -61,7 +61,7 @@
         
         
 <div class="col-3 sherif-1">
-            <img src="../images/ai.jpg">
+            <img src="../images/Ai.jpg">
                     <h3 class="me-1"> **"AI-Powered Diagnostics Transform Healthcare"**</h3>
                     <p class="col">A new AI system has been developed to diagnose diseases with 95% accuracy. This technology is set to improve patient outcomes and reduce healthcare costs globally.
 </p>
